<resources>


    <string name="app_name">DiagonApp</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- LoginActivity Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>


    <!-- ******************* Main layout labels ***************** -->
    <!--      Text     -->
    <string name="poseeaccount">¿Ya posee una cuenta?</string>
    <string name="noaccount">Otra opción</string>
    <string name="loadingsingingmail">Ingresando..</string>
    <string name="ingresar">Ingrese aquí!</string>

    <!-- Button labels -->
    <string name="singingoogle">Ingresar con Gmail</string>
    <string name="singinapp">Ingresar</string>
    <string name="singuptapp">Registrarse</string>
    <string name="diagon">Diagon</string>
    <string name="app">App</string>
    <!-- ************************************************************ -->


    <!-- ******************* Register layout labels ***************** -->
    <!--      Inputs Text     -->
    <string name="emailinput">Email</string>
    <string name="nameinput">Nombre</string>
    <string name="familynameinput">Apellido</string>
    <string name="passwordinput">Contraseña</string>

    <!-- Button labels -->
    <string name="registerbutton">Registrarme</string>
    <!-- ************************************************************ -->


    <!-- ******************* Login layout labels ***************** -->
    <!--      Text     -->
    <string name="forgotpass">Olvide mi contraseña</string>

    <!-- Button labels -->
    <string name="loginbutton">Ingresar</string>
    <!-- ************************************************************ -->


    <string name="noreco">Usted no posee ningun recorrido.</string>


    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Constraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu Contraseña?</string>
    <string name="entrar_boton">ENTRAR</string>
    <string name="cliente_label">Cliente</string>
    <string name="producto_label">Producto</string>
    <string name="fecha_label">Fecha</string>
    <string name="prioridad_label">Prioridad</string>
    <string name="notas_label">Notas</string>
    <string name="notas_hint">Notas</string>

    <!-- Navigation Drawer -->
    <string name="open">open</string>
    <string name="close">close</string>


    <string-array name="clientes">
        <item>Fernando Jimenez</item>
        <item>Carlos Fuentes</item>
        <item>Pedro Lopez</item>
    </string-array>
    <string-array name="productos">
        <item>Seguro A</item>
        <item>Seguro B</item>
        <item>Seguro C</item>
    </string-array>
    <string-array name="prioridades">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>


</resources>
