<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_utn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/diagoicon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/diagon"
                    android:textColor="@color/colorAccent"
                    android:layout_weight="1"
                    android:textSize="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/app"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:textSize="30dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/logingoogle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider2"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@mipmap/googlecolor"
                android:text="Ingresar con Gmail"
                android:paddingLeft="10dp"
                android:paddingRight="60dp"
                android:background="@drawable/border"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="50dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noaccount"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/grisletras"
                    android:layout_centerInParent="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:layout_toLeftOf="@id/tv_2"
                    android:background="@color/colorPrimaryDark"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:layout_toRightOf="@id/tv_2"
                    android:background="@color/colorPrimaryDark"
                    />

            </RelativeLayout>


            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:text="@string/singuptapp"
                android:textColor="@color/textoBotones"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/poseeaccount"
                    android:textColor="@color/grisletras" />

                <TextView
                    android:id="@+id/tvlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ingresar"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>