<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_utn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>


            <LinearLayout
                android:id="@+id/fields_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_to_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_to_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contraseña"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:text="@string/singinapp"
                android:textColor="@color/textoBotones"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:text="SALIR GOOGLE"
                android:textColor="@color/textoBotones"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/noaccount"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signin_buttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:text="@string/singuptapp"
                android:textColor="@color/textoBotones"
                android:textAllCaps="false"
                android:textSize="18sp" />






        </LinearLayout>

    </ScrollView>

</LinearLayout>